# agimus-demos-ur10-pointing

./: .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README-calibration.md  README.md  README_how_to_rosbag.md  calib_order _tool.py  calibration.py  calibration_paths.py  config.rviz  demo-aircraft.yaml  demo-april-tag-plank.yaml  demo-april-tag.yaml  demo-plaque-tubes-with-table.yaml  demo.launch  load_ur.launch  load_ur10e.launch  package.xml  play_path.py  plugin.xml  rviz.launch  rviz_rosbag.launch  script_hpp.py  simulation.launch  stop-controllers.py  supervisor.py  test_sot.py  tools_hpp.py  ur10_fov.py  ur10_upload.launch  world_setup.launch
src/: CMakeLists.txt  contact-simulation.cc  contact-simulation.hh  python-module-py.cc  tsp-py.cpp  tsp.cpp  tsp.hpp
src/agimus_demos/: __init__.py  calibration.py  in_state_planner.py  tools_hpp.py
src/agimus_demos/calibration/: __init__.py  hand_eye_calibration.py  tooltip_calibration.py
src/agimus_demos/talos/: tools_hpp.py
src/rqt_agimus/: contact_calibration.py  tooltip_calibration.py
talos/: CMakeLists.txt  INSTALL.md
talos/calibration/: README
talos/calibration/apriltags/: README  README.md  calibration.tex  common_hpp.py  compute_calibration.py  demo.launch  on_pyrene.launch  play_motion.py  script_hpp.py  tracker.launch
talos/calibration/contact/: 27_opt_contacts  27_opt_handles  27_opt_pregrasps  3_test_contacts  3_test_handles  3_test_pregrasps  README.md  common_hpp.py  demo.launch  demo.py  demo.yaml  opt_contacts_table_contact_01  opt_contacts_table_contact_10  opt_contacts_table_contact_19  opt_handles_table_contact_10  opt_handles_table_contact_19  opt_pregrasps_table_contact_01  opt_pregrasps_table_contact_10  opt_pregrasps_table_contact_19  path_generator.py  play_motion.py  script_hpp.py  simulation.launch  supervisor.py
talos/camera_calibration/: compute_model.py  convert_to_visp_yaml.py  generate_pose.py  on_pyrene.launch  rosbag-calib.sh  run_demo.py  script_hpp.py  script_hpp2.py  supervisor.py  test_compute_model.py
talos/common/: camera_info.yaml  half_sitting.json  publish_constants.py
talos/docker/: Dockerfile  config.sh  gepetto_talos.repos  pal_talos.repos
talos/docker/patches/: agimus-demos  apply.sh  hpp-constraints  pinocchio
talos/full-body-calibration/: joint_limits.py
talos/lean_on_table/: README.md  common_hpp.py  script_hpp.py  simulation.launch  world_setup.launch
talos/manipulate-boxes/: common_hpp.py  script_hpp.py
talos/manipulate_boxes/: README.md  calibration.py  calibration_hpp.py  common_hpp.py  config.rviz  estimation.launch  estimation.py  flip_box.py  gazebo.launch  geometric_simu.launch  on_pyrene.launch  on_pyrene_no_estimation.launch  plan_path.py  robot_only.launch  robot_only_supervisor.py  script_hpp.py  supervisor.py  support_calibration.launch  world_setup.launch
talos/movement_30_11_18/: on_pyrene.launch  run_demo.py  script_hpp.py  script_hpp2.py  supervisor.py
talos/pass_box_between_hands/: gazebo.launch  geometric_simu.launch  on_pyrene.launch  pass_box_between_hands.py  play_supervisor.py  supervisor.py
talos/pickup_cardboard_box/: common_hpp.py  estimation_hpp.py  gazebo.launch  geometric_simu.launch  on_pyrene.launch  on_pyrene_no_vision.launch  script_hpp.py  supervisor.py
talos/pickup_object/: estimation.py  gazebo.launch  geometric_simu.launch  hpp.py  on_pyrene_no_vision.launch  script_hpp.py  supervisor.py
tiago/: CMakeLists.txt
tiago/common/: calibration_base_to_mocap_frame.py  tiago_calibration_2_6D.tsv
tiago/common/P72/: run_calibration.py
tiago/common/navigation_map/: README.md  acquire_map_to_mocap_frame.py  mocap_tiago.launch  tiago_calibration_0_6D.tsv  tiago_calibration_1_6D.tsv
tiago/common/pal/: local_planner.yaml
tiago/deburring/: 2d_navigation.launch  README.md  TODO  demo.launch  estimation.launch  estimation.py  estimation_realsense.launch  estimation_realsense.py  gazebo.launch  generate_obstacle_model.py  helper.py  initial_pose.py  mapping-simu.launch  publish_initial_pose.py  python_tsp  rviz.launch  rviz_realsense.launch  security_margins.py  simulation.launch  stop-controllers.py  supervisor.py  tiago.launch  tiago_deburring_demo.rviz  tiago_deburring_model.rviz  tiago_deburring_realsense.rviz  tiago_fov.py  tiago_fov_realsense.py  travelling_salesman.py  travelling_salesman_realsense.py  tsp.py  world_setup.launch
tiago/docker/: Dockerfile  Dockerfile.robot  Dockerfile.vnc  README.md  build_image.sh  gepetto_tiago.repos  launch-gepetto-gui.sh  pal_tiago.repos  set_env_for_tiago  tiago_deburring_demo.repos
tiago/docker/patches/: gepetto-viewer-corba  pinocchio
tiago/insert_drill/: config.rviz  estimation.launch  gazebo.launch  geometric_simu.launch  script_hpp.py  supervisor.py  tiago.launch  tiago_hpp.launch  world_setup.launch
tiago/setup/: geometric_simu.launch  play_supervisor.py  supervisor.py
ur10/: CMakeLists.txt
ur10/bin-picking/: E0_0d.txt  Two-surfaces.py  demo-bin-picking-part.yaml  demo.launch  forward.py  load_ur.launch  load_ur10e.launch  script_hpp.py  simulation.launch  supervisor.py  tf.py  tools_hpp.py  ur10_upload.launch  vision_tf.py
ur10/config/: pid.yaml
ur10/docker/: 99-realsense-libusb.rules  Dockerfile  Dockerfile.melodic  Dockerfile.noetic  Makefile  README.md  build_image.sh  config.sh  config.sh.noetic  gepetto_ur10.repos  passwd  set_env_for_ur10  setup-opt-robotpkg.sh  ur10_local.sh  ur10_robot.sh  ur10e_calibration.yaml
ur10/docker/patches/: hpp-constraints
ur10/pointing/: README-localization.md  README.md  README_how_to_rosbag.md  calibration.py  calibration_path.py  config.rviz  demo-april-tag-plank.yaml  demo-plaque-tubes-with-table.yaml  demo.launch  demo.yaml  estimation.launch  estimation_april_tag_plank.launch  estimation_realsense.launch  play_path.py  script_hpp.py  script_hpp_plaque.py  simulation.launch  supervisor.py  test_sot.py  test_supervisor.py  tools_hpp.py  ur10_fov.py  ur10_upload.launch  world_setup.launch
ur10/pointing/data-simulation/: calib-configs.csv  camera.xml  pose_cPo_1.yaml  pose_cPo_13.yaml  pose_cPo_3.yaml  (+15 more)
(+298 files in other folders)
