<?xml version="1.0"?>
<package format="2">
  <name>agimus_demos</name>
  <version>0.0.0</version>
  <description>The agimus_demos package</description>

  <maintainer email="jmirabel@laas.fr">Joseph Mirabel</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/agimus_demos</url> -->


  <author email="jmirabel@laas.fr">Joseph Mirabel</author> 
  <author email="anicolin@laas.fr">Alexis Nicolin</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
